--- a/french_dashboards.yml
+++ b/french_dashboards.yml
@@ -3,11 +3,11 @@ apiVersion: 1
 providers:
 - name: 'FrenchTeslamateCustomDashboards'
   orgId: 1
-  folder: French TeslaMate Custom Dashboards
+  folder: French TeslaMate Dashboards
   folderUid: jasdTmCeIeFq
   type: file
   disableDeletion: false
   editable: true
   updateIntervalSeconds: 86400
   options:
-    path: /FrenchTeslamateCustomDashboards
+    path: /TeslamateDashboardsFr
