--- a/french_dashboards.yml
+++ b/french_dashboards.yml
@@ -1,7 +1,7 @@
 apiVersion: 1
 
 providers:
-- name: 'FrenchTeslamateCustomDashboards'
+- name: 'TeslamateDashboardsFr'
   orgId: 1
   folder: French TeslaMate Dashboards
   folderUid: jasdTmCeIeFq
