--- a/french_dashboards.yml
+++ b/french_dashboards.yml
@@ -4,7 +4,7 @@ providers:
 - name: 'TeslamateDashboardsFr'
   orgId: 1
   folder: French TeslaMate Dashboards
-  folderUid: jasdTmCeIeFq
+  folderUid: sssdTmCeIeFq
   type: file
   disableDeletion: false
   editable: true
